# bhn-hawksense-crawler

./: .gitignore  README.md  docker-compose.yml  main.py  postgres.dockerfile  pyproject.toml  scrapyd.dockerfile  scrapyrt.dockerfile
alembic/: env.py
alembic/versions/: 41ab515eef39_initial.py  ba9c222a756a_initial.py
app/: pyproject.toml  scrapy.cfg
app/alembic/: env.py
app/alembic/versions/: 13b346b8a803_initial_schema_and_tables_migration.py  1edab94ae2c9_initial_schema_and_tables_migration.py  224956037e22_initial_schema_and_tables_migration.py  22d139b26248_initial_schema_and_tables_migration.py  5eea39c63a57_initial_schema_and_tables_migration.py  661377f2738e_initial_schema_and_tables_migration.py  78eb95fd909e_initial_schema_and_tables_migration.py  9b39bcc140da_initial_schema_and_tables_migration.py  c944d9472eee_initial_schema_and_tables_migration.py  cfeefadc66ee_initial_schema_and_tables_migration.py  efa54ce598ea_initial_schema_and_tables_migration.py
app/crawler/: settings.py
app/crawler/spiders/: auditspider.py
app/scripts/: alembic-init.sh  db-init.sh  schema.sql  scrapyd-init.sh
crawler/: items.py  middlewares.py  models.py  pipelines.py  settings.py
crawler/spiders/: auditspider.py
scripts/: db-init.sh
