[tool.poetry]
name = "bhn-hawksense-crawler"
version = "0.1.0"
description = "Cralwer for hawkSense"
authors = ["theDataFox <leejoshijones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.19"
scrapy = "^2.3.0"
scrapyd = "^1.2.1"
pillow = "^7.2"
nltk = "^3.5"
tldextract = "^2.2.3"
validators = "^0.18.1"
psycopg2 = "^2.8.6"
python-dotenv = "^0.14.0"
#scrapyrt =
#scarpyd =
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
